@@ -1,3 +1,8 @@
+<b>2008-10-10</b>
+
+* Problem with "Add and clear" causing double refresh fixed, bug 2139697 presumed closed
+* Map no longer redrawn after minor edits
+
 <b>2008-10-04</b>
 
 * Airline search and recording added
